Fixed Call Log menu too wide on mobile devices - Pagination info css was too wide

--- a/src/userinterface/static/css/callattendant.css
+++ b/src/userinterface/static/css/callattendant.css
@@ -36,9 +36,22 @@ body {
 .time {
    min-width: 95px;
 }
+
+/*
+Class that allows activation of the Manage Caller page
+*/
 .manage-caller {
     cursor: pointer;
 }
+/*
+Class that allows activation of the Voice Message dialog
+*/.voice-message {
+    cursor: pointer;
+}
+
+/*
+Pagination links
+*/
 .pagination-fixed {
     position: fixed;
     top: 40px;
@@ -55,22 +68,27 @@ body {
     box-shadow: inset 0 1px 0 white, 0 1px 5px rgba(0, 0, 0, .1);
     filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
-
 .pagination {
     margin: 10px 0;
     margin-top: 0;
     margin-bottom: 0;
 }
+/*
+Pagination info, e.g., displaying 1 - 25 calls in total 2,142
+*/
 .pagination-page-info {
     padding: .6em;
     padding-top: 5px;
     padding-bottom: 0;
     padding-left: 0;
-    width: 40em;
+    width: 100%;
     margin: .5em;
     margin-left: 0;
     font-size: 16px;
 }
+/*
+Pagination info numbers in above
+*/
 .pagination-page-info b {
     color: black;
 /*
